# ota-fetch

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md
.github/workflows/: ci.yml
src/: config.c  config.h  hash.c  hash.h  ini.c  ini.h  logging.c  logging.h  main.c  manifest.c  manifest.h  ota_fetch.c  ota_fetch.h  verify_libcrypto.c  verify_libcrypto.h
test/: run-fetch-test.sh
test/etc/ota_fetch/: ota_fetch.conf
test/scripts/: gen_test_keys.py  https_server.py  run-fetch-test.sh  sign_manifest.py
test/server/: bundle.raucb  manifest.json  manifest_base.json
